--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ body {
   width: 100%;
   margin: 0 auto;
   font-family: 'Roboto', Helvetica, sans-serif;
+  scroll-behavior: smooth;
 }
 
 .section-1 {
@@ -17,7 +18,7 @@ body {
   margin: 0 auto;
   color: white;
   background-color: #1f2937;
-  padding-bottom: 80px;
+  padding-bottom: 20px;
 }
 
 .navbar {
@@ -85,12 +86,18 @@ nav h1 {
 
 div .right {
   flex: 1;
-  background-color: gray;
   width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.right img {
+  width: 250px;
+  height: 250px;
+  object-fit: cover;
+  border-radius: 50%;
 }
 
 .section-2 {
@@ -110,9 +117,34 @@ div .right {
 
 .flex {
   display: flex;
-  gap: 50px;
+  justify-content: center;
+  align-items: top;
   text-align: center;
+  margin: center;
 }
+
+#aboutPara {
+  text-align: center;
+  font-weight: 500;
+  line-height: 16px;
+  width: 300px;
+  font-size: 20px;
+  line-height: 30px;
+}
+.aboutImages {
+  display: flex;
+  gap: 10px;
+}
+
+.aboutImg {
+  width: 400px;
+  height: 400px;
+  object-fit: cover;
+  display: flex;
+  margin: auto;
+  border-radius: 10px;
+}
+
 .box {
   display: flex;
   flex-direction: column;
@@ -140,7 +172,7 @@ div .right {
 
 .section-3-container p {
   font-size: 36px;
-  font-style: italic;
+
   font-weight: light;
 }
 
@@ -152,19 +184,18 @@ div .right {
 }
 
 .section-4 {
-  width: 70%;
-  margin: 60px auto;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin: 0 auto;
+  color: white;
+  background-color: #1f2937;
+  padding-bottom: 20px;
 }
 
-.cta-container {
-  background-color: #3882f6;
-  padding: 20px;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  color: white;
-  border-radius: 10px;
-}
+/* .cta-container {
+
+} */
 
 .cta-text {
   padding: 10px 40px;
@@ -173,14 +204,15 @@ div .right {
 .cta-flex {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: left;
+  padding-left: 40px;
 }
 
 .cta-flex button {
   color: white;
-  background-color: #3882f6;
+  background-color: darkgray;
   border: 2px solid white;
-  padding: 8px 40px;
+  padding: 8px 20px;
   border-radius: 10px;
   font-size: 1.2rem;
 }
@@ -190,4 +222,31 @@ footer {
   color: white;
   text-align: center;
   padding: 30px;
+}
+
+/* Additional Styling */
+a {
+  position: relative;
+  color: #fff;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #fff;
+}
+
+a::before {
+  content: '';
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #fff;
+  transform: scaleX(0);
+  transition: transform 0.3s ease;
+}
+a:hover::before {
+  transform: scaleX(1);
 }
